--- a/src/components/TopNavbar/TopNavbar.css
+++ b/src/components/TopNavbar/TopNavbar.css
@@ -39,18 +39,26 @@
 }
 
 #TopNavbar__profile h2 {
-  font-weight: 580;
-  font-size: 1.1rem;
-  margin-left: 25px;
-  letter-spacing: 1.3px;
+  margin-left: 1.1rem;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 0;
+  text-align: center;
+  letter-spacing: 0.15px;
+  color: #ffffff;
 }
 
 #TopNavbar__profile img {
-  width: 47px;
-  height: 47px;
   border-radius: 50%;
   padding: 1px;
   border: 3px solid #563ae8;
+  width: auto;
+  height: 50px;
+  margin-top: 0;
+  /* height: 53.29px; */
 }
 
 @media screen and (max-width: 1024px) {
