fix: added sponsors and fix css

--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -70,7 +70,7 @@
 #EventOverview__start h3 i {
   /* font-size: 4.5rem;
   margin: 0; */
-  font-family: "Neue Montreal";
+  font-family: NeueMontreal-BoldItalic;
   font-style: italic;
   font-weight: bold;
   font-size: 79.1169px;
@@ -87,7 +87,7 @@
   font-size: 1rem;
   font-weight: 500; */
 
-  font-family: "Neue Montreal";
+  font-family: NeueMontreal-BoldItalic;
   font-style: italic;
   font-weight: 500;
   font-size: 18px;
