--- a/src/components/IndDetails/IndDetails.css
+++ b/src/components/IndDetails/IndDetails.css
@@ -1,99 +1,100 @@
 #IndDetails__container {
-    width :280px;
-    height : 350px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    align-items: center;
-    padding : 20px 5px 10px 5px;
-    margin : 0 10px 20px 10px;
+  width: 280px;
+  height: 350px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  padding: 20px 5px 10px 5px;
+  margin: 0 10px 20px 10px;
 }
 
 #IndDetails__container h2 {
-    font-size: 1.1rem;
-    font-weight: 500;
-    text-align: center;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-align: center;
 }
 
 #IndDetails__container img {
-    width : 70px;
-    height : 70px;
-    border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-bottom: 1.5rem;
 }
 
 #IndDetails__skills {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 15px;
 }
 .IndDetails__skill {
-    font-size: 0.9rem;
-    font-weight: 500;
-    padding : 6px 9px;
-    margin : 5px 5px;
-    border-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 6px 9px;
+  margin: 5px 5px;
+  border-radius: 5px;
 }
 #IndDetails__tools {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 20px;
 }
 #IndDetails__tools img {
-    width : 24px;
-    height: 24px;
-    margin : 2px 5px;
+  width: 24px;
+  height: 24px;
+  margin: 2px 5px;
 }
 #IndDetails__btn {
-    background-color: rgba(86, 58, 232, 1);
-    width: 70%;
-    border-radius: 6px;
-    position: absolute;
-    bottom : 20px;
-    padding : 7px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  background-color: rgba(86, 58, 232, 1);
+  width: 70%;
+  border-radius: 6px;
+  position: absolute;
+  bottom: 20px;
+  padding: 7px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 #IndDetails__btn:hover {
-    box-shadow: 0px 0px 5px 1px rgba(86, 58, 232, 1) ;
+  box-shadow: 0px 0px 5px 1px rgba(86, 58, 232, 1);
 }
 
-#IndDetails__btn.IndDetails__invited  {
-    border : 1px solid #EB482F;
-    background-color: rgba(224, 69, 45, 0.08);
+#IndDetails__btn.IndDetails__invited {
+  border: 1px solid #eb482f;
+  background-color: rgba(224, 69, 45, 0.08);
 }
 
 #IndDetails__btn.IndDetails__invited:hover {
-    box-shadow: none;
-    cursor:initial;
+  box-shadow: none;
+  cursor: initial;
 }
 
-#IndDetails__btn h4{
-    font-size: 0.91rem;
-    font-weight: 500;
-    color : rgba(255, 255, 255, 1);
-    margin : 0;
+#IndDetails__btn h4 {
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 1);
+  margin: 0;
 }
 
 #IndDetails__btn.IndDetails__invited h4 {
-    color : rgba(235, 72, 47, 1);
+  color: rgba(235, 72, 47, 1);
 }
 
-@media screen and (max-width : 679px) {
-    #IndDetails__container {
-        height : max-content;
-    }
-    #IndDetails__btn {
-        position: relative;
-        margin-top : 15px;
-    }
+@media screen and (max-width: 679px) {
+  #IndDetails__container {
+    height: max-content;
+  }
+  #IndDetails__btn {
+    position: relative;
+    margin-top: 15px;
+  }
 }
