fix: palette main image margin

--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -27,6 +27,7 @@
   color: white;
   width: 90%;
   border-radius: 7px;
+  margin-left: 25px;
   padding-left: 32px;
   padding-right: 10px;
   padding-top: 32px;
