--- a/src/components/LandingScreen/Brand/Brand.css
+++ b/src/components/LandingScreen/Brand/Brand.css
@@ -1,129 +1,133 @@
-.main-brand-div{
-    background-color:#4329E8;
-    color:white; 
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    overflow-y: hidden;
-    overflow-x: hidden;
+.main-brand-div {
+  background-color: #4329e8;
+  color: white;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
-.brand-content{
-    padding-top : 30px;
-    padding-left : 50px;
-    width:70vw;
-    font-weight: normal;
-    font-size:1.6rem;
-    font-family: NeueMontreal-Regular;
+.brand-content {
+  padding-top: 30px;
+  padding-left: 50px;
+  width: 70vw;
+  font-weight: normal;
+  font-size: 1.6rem;
+  font-family: NeueMontreal-Regular;
 }
-.brand-head{
-    font-size: 5rem;
-    line-height: normal;
-    font-family: NeueMontreal-Bold;
+.brand-head {
+  font-size: 5rem;
+  line-height: normal;
+  font-family: NeueMontreal-Bold;
+}
+
+.brand-info {
+  font-family: NeueMontreal-Italic;
 }
 
 #brand-img {
-    display : block;
-    position: absolute;
-    top : -20px;
-    right : -70px;
-    height : 130vh;
-    width : auto;
-    margin : 0;
+  display: block;
+  position: absolute;
+  top: -20px;
+  right: -70px;
+  height: 130vh;
+  width: auto;
+  margin: 0;
 }
 
 #brand-img-bigger {
+  display: none;
+}
+
+@media screen and (max-width: 1359px) {
+  #brand-img {
+    position: absolute;
+    top: 50px;
+    right: -40px;
+    height: 120vh;
+    width: auto;
+    margin: 0;
+  }
+  .brand-content {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (max-width: 1185px) {
+  .brand-content {
+    width: 70vw;
+    font-size: 1.6rem;
+  }
+  .brand-head {
+    font-size: 4rem;
+    font-weight: bolder;
+    line-height: normal;
+  }
+  #brand-img {
+    position: absolute;
+    top: 47px;
+    right: -70px;
+    height: 115vh;
+    width: auto;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 1010px) {
+  #brand-img {
     display: none;
+  }
+  #brand-img-bigger {
+    display: block;
+    position: absolute;
+    width: 600px;
+    top: 30vh;
+  }
+  .main-brand-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .brand-head {
+    text-align: center;
+    font-size: 2.5rem;
+  }
+  .brand-content {
+    font-size: 1.5rem;
+    width: auto;
+    max-width: 90vw;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 0;
+  }
 }
 
-@media screen and (max-width : 1359px) {
-    #brand-img {
-        position: absolute;
-        top : 50px;
-        right : -40px;
-        height : 120vh;
-        width : auto;
-        margin : 0;
-    }
-    .brand-content {
-        font-size: 1.8rem;
-    }
+@media screen and (max-width: 620px) {
+  .brand-head {
+    text-align: center;
+    font-size: 2.2rem;
+  }
+  .brand-content {
+    font-size: 1.3rem;
+    width: auto;
+    max-width: 90vw;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 0;
+    line-height: normal;
+  }
+  #brand-img-bigger {
+    width: 620px;
+    right: 0.5vw;
+    top: 30vh;
+  }
 }
 
-@media screen and (max-width : 1185px) {
-    .brand-content{
-        width:70vw;
-        font-size:1.6rem;
-    }
-    .brand-head{
-        font-size: 4rem;
-        font-weight: bolder;
-        line-height: normal;
-    }
-    #brand-img {
-        position: absolute;
-        top : 47px;
-        right : -70px;
-        height : 115vh;
-        width : auto;
-        margin : 0;
-    }
-}
-
-@media screen and (max-width : 1010px) {
-   #brand-img {
-       display: none;
-   }
-   #brand-img-bigger {
-       display: block;
-       position : absolute;
-       width: 600px;
-       top : 30vh;
-   }
-   .main-brand-div {
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-start;
-       align-items: center;
-   }
-   .brand-head {
-       text-align: center;
-       font-size: 2.5rem;
-   }
-   .brand-content {
-       font-size: 1.5rem;
-       width : auto;
-       max-width: 90vw;
-       text-align: center;
-       padding-top : 20px;
-       padding-left : 0;
-   }
-}
-
-@media screen and (max-width : 620px) {
-    .brand-head {
-        text-align: center;
-        font-size: 2.2rem;
-    }
-    .brand-content {
-        font-size: 1.3rem;
-        width : auto;
-        max-width: 90vw;
-        text-align: center;
-        padding-top : 20px;
-        padding-left : 0;
-        line-height: normal;
-    }
-    #brand-img-bigger {
-        width: 620px;
-        right : 0.5vw;
-        top : 30vh;
-    }
-}
-
-@media screen and (max-width : 361px) and (max-height : 660px) {
-    #brand-img-bigger {
-        width: 400px;
-        right : 0.5vw;
-        top : 40vh;
-    }
+@media screen and (max-width: 361px) and (max-height: 660px) {
+  #brand-img-bigger {
+    width: 400px;
+    right: 0.5vw;
+    top: 40vh;
+  }
 }
