--- a/src/components/SelfTeamPage/SelfTeamPage.css
+++ b/src/components/SelfTeamPage/SelfTeamPage.css
@@ -139,6 +139,8 @@
   font-size: 0.89rem;
   font-weight: lighter;
   cursor: pointer;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 
 @media screen and (max-width: 1175px) {
