--- a/src/components/LandingScreen/LoadingScreen/Loading.css
+++ b/src/components/LandingScreen/LoadingScreen/Loading.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #121212;
 }
 
 .palette-loader-title {
