--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -35,7 +35,7 @@
   background-image: url("../../assets/eye.png");
   background-repeat: no-repeat;
   background-position: top right;
-  box-shadow: 0px 0px 10px 3px rgba(67, 41, 232, 0.45);
+  box-shadow: 0px 10px 30px 4px rgb(67 41 232 / 45%);
   height: 300px;
 }
 
