display none - recaptcha

--- a/src/components/SelfTeamPage/SelfTeamPage.css
+++ b/src/components/SelfTeamPage/SelfTeamPage.css
@@ -152,6 +152,10 @@
   padding : 10px 20px;
 }
 
+.grecaptcha-badge{
+  display : none !important;
+}
+
 #SelfTeamPage__jointeambtn h4 {
   font-size: 1rem;
   text-align: center;
