--- a/src/components/LandingScreen/Sponsors/Sponsors.css
+++ b/src/components/LandingScreen/Sponsors/Sponsors.css
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  max-width: 55vw;
+  max-width: 75vw;
   height: max-content;
   justify-content: center;
   align-items: center;
@@ -55,13 +55,25 @@
     font-size: 2.3rem;
   }
   #Sponsors__logos {
-    max-width: 85vw;
+    max-width: 70vw;
   }
   #Sponsors__logos img {
     width: 80px;
   }
   .Sponsors__smallerlogo {
     width: 97px !important;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #Sponsors__container {
+    height: 850px;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  #Sponsors__container {
+    height: 800px;
   }
 }
 
@@ -93,8 +105,13 @@
   }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-width: 300px) {
+  #Sponsors__heading {
+    font-size: 1.4rem;
+    margin-top: 30px;
+  }
+
   #Sponsors__container {
-    height: 700px;
+    height: 1200px;
   }
 }
