--- a/src/components/SelfTeamPage/SelfTeamPage.css
+++ b/src/components/SelfTeamPage/SelfTeamPage.css
@@ -148,24 +148,24 @@
 #SelfTeamPage__jointeam {
   display: flex;
   flex-direction: column;
-  width : 50%;
-  padding : 10px 20px;
+  width: 50%;
+  padding: 10px 20px;
 }
 
-.grecaptcha-badge{
-  display : none !important;
+.grecaptcha-badge {
+  display: none !important;
 }
 
 #SelfTeamPage__jointeambtn h4 {
   font-size: 1rem;
   text-align: center;
-  margin : 5px 7px;
-
+  margin: 5px 7px;
 }
 
 #SelfTeamPage__jointeam p {
   font-size: 1rem;
   margin-top: 10px;
+  font-family: Inter;
 }
 
 #SelfTeamPage__jointeam-title {
@@ -175,6 +175,7 @@
 }
 
 #SelfTeamPage__enterteam {
+  padding-top: 5px;
   border-radius: 7px;
   display: flex;
   flex-direction: row;
@@ -182,15 +183,15 @@
 }
 
 #SelfTeamPage__enterteam div:nth-child(1) {
-  padding : 10px 20px;
-  width : 64%;
+  padding: 10px 20px;
+  width: 64%;
 }
 
 #SelfTeamPage__enterteam div:nth-child(1) input {
-  width : 70%;
-  height : 40px;
+  width: 70%;
+  height: 40px;
   background-color: transparent;
-  border : 0px;
+  border: 0px;
   outline: none;
   font-size: 1.05rem;
   font-weight: normal;
@@ -199,11 +200,11 @@
 }
 
 #SelfTeamPage__jointeambtn {
-  color : white;
-  padding : 6px 8px;
+  color: white;
+  padding: 6px 8px;
   font-size: 1rem;
   font-weight: 500;
-  background-color:  rgba(86, 58, 232, 1);
+  background-color: rgba(86, 58, 232, 1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -212,7 +213,7 @@
 }
 
 #SelfTeamPage__jointeambtn:hover {
-  box-shadow: 0px 0px 3px 1px rgba(86, 58, 232, 1);;
+  box-shadow: 0px 0px 3px 1px rgba(86, 58, 232, 1);
 }
 
 #SelfTeamPage__enterteam div:nth-child(1) h2 {
@@ -282,8 +283,8 @@
   }
   #SelfTeamPage__jointeam {
     align-items: center;
-    margin-top : 20px;
-    width : 90%;
+    margin-top: 20px;
+    width: 90%;
   }
 
   #SelfTeamPage__userdetails #SelfTeamPage__userdetail:nth-child(1) {
