minor ui changes

--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -52,7 +52,7 @@
 }
 
 #EventOverview__timelinesoondiv h3 {
-  font-size: 23px;
+  font-size: 1.2rem;
   font-weight: 500;
   font-family: Inter;
   font-style: normal;
