--- a/src/components/CountdownTimer/CountdownTimer.css
+++ b/src/components/CountdownTimer/CountdownTimer.css
@@ -5,13 +5,14 @@
 }
 
 #CountdownTimer__container h3 {
-  font-size: 18px;
+  font-size: 1.15rem;
   font-weight: 500;
+  font-family: NeueMontreal-Regular !important;
 }
 
 #CountdownTimer__container h3 span {
   margin-left: 8px;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
